--- a/views/categories.erb
+++ b/views/categories.erb
@@ -1,4 +1,4 @@
-      <form action="/group" method="POST" id="categories" data-load="categoryLoad">
+      <form action="/category" method="POST" id="categories" data-load="categoryLoad">
         <em>categories</em><br/>
         <% @categories.each do |category| %>
           <div class="category"><%= category.name %></div><br/>
